# mspm0_cmake_mode

./: .clangd  CMakeLists.txt  openocd.cfg  run.sh
.cache/clangd/index/: DeviceFamily.h.2CDC79271BACA2A7.idx  User.h.6AEF824DCBC8EFE5.idx  appled.c.50734B264EC477E7.idx  appuart.c.A5FA65F3370DC235.idx  appuart.h.40B85674F392DC12.idx  cmsis_compiler.h.96558910B98A2657.idx  cmsis_gcc.h.00DF05FF99CC8139.idx  cmsis_version.h.4117082CD15E21CF.idx  core_cm0plus.h.B2DCC17FF0102841.idx  dl_adc12.h.ACDAF9FD4328161F.idx  dl_aes.h.CE62E9E50E9717D9.idx  dl_aesadv.h.5026EDFBE2AEBE67.idx  dl_common.c.D935034A27C2AFB4.idx  dl_common.h.6CA565C0B8393C3F.idx  dl_comp.h.FE293EA4CA9A95F6.idx  dl_core.h.1BF3708FE9F412DF.idx  dl_crc.h.814BF51A851453FD.idx  dl_crcp.h.57F7C40D3A0F4856.idx  dl_dac12.h.2BA7A0B021AA5C70.idx  dl_dma.h.3E4CFA1045233196.idx  dl_factoryregion.h.59894BEC7056BF87.idx  dl_flashctl.h.A0537C4CE937FFFF.idx  dl_gpamp.h.55C5C0613C0276BF.idx  dl_gpio.h.8B64386A1FCAE777.idx  dl_i2c.h.6D3C739DF55591BC.idx  dl_interrupt.c.FFC7C4A79A6FA5A8.idx  dl_interrupt.h.B548E89DA53BFBCA.idx  dl_iwdt.h.166832291B03BE0B.idx  dl_keystorectl.h.9C2C823921CEB8DF.idx  dl_lcd.h.EA2C59BBE4C67868.idx  dl_lfss.h.C29E3E4FD6D12006.idx  dl_mathacl.h.F3CB6AA74CDBD236.idx  dl_mcan.h.AF3298519B7ACD63.idx  dl_opa.h.DC028FDFFAA8F5D1.idx  dl_rtc.h.9D72791AECA6B66C.idx  dl_rtc_a.h.E28EA17D819F0460.idx  dl_rtc_common.h.8815A9469F543DEB.idx  dl_scratchpad.h.4DF48FA191EB2AEB.idx  dl_spi.h.F397A37FC2D8056F.idx  dl_sysctl.h.9DF40111B6C56D64.idx  (+55 more)
cmake/: build-config.cmake  gcc-arm-none-eabi.cmake  mspm0g3507.ld  startup_mspm0g3507.c  syscalls.c
cmake/ti-mspm0/: CMakeLists.txt
code/App/Inc/: appled.h  appuart.h  scheduler.h
code/App/Src/: appuart.c  scheduler.c
code/Driver/ti/driverlib/m0p/sysctl/: dl_sysctl_mspm0g1x0x_g3x0x.h
code/User/Inc/: User.h  hardware_init.h  main.h  mspm0g3507_it.h
code/User/Src/: hardware_init.c  main.c  mspm0g3507_it.c
